# SinglePendulumMPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  callgrind.out.3671  config workingSomeTimes.yaml  config.yaml  config_swing_up.yaml  config_weight_terminal.yaml
Plot/: CMakeLists.txt  Graph_Logger.cpp  Graph_Logger.h  gnuplot_i.cpp  gnuplot_i.h
Plots/: Real position Vs Calculated position.ps  Real position Vs Initialy calculated position.ps
SinglePendulum_cpp/: ActuationModelSinglePendulum.cpp  ActuationModelSinglePendulum.h  CMakeLists.txt  Controller.cpp  Controller.h  CostModelSinglePendulum.cpp  CostModelSinglePendulum.h  main.cpp  main_V1.cpp  main_V2.cpp
SinglePendulum_cpp/single_pendulum_description/urdf/: single_pendulum.urdf
